<resources>
    <string name="app_name">TMDB</string>

    <string name="link_github" translatable="false">https://github.com/M1Dr05/TMDb</string>
    <string name="link_tmdb" translatable="false">https://www.themoviedb.org/documentation/api</string>

    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="failed_again">Something is not right, try again.</string>
    <string name="enter_your_search">Enter your search</string>
    <string name="without_results">Without results</string>
    <string name="edt_hint_search">Movies, tv shows and persons</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="seasons">"Seasons: "</string>
    <string name="episodes">Episodes:</string>
    <string name="overview">Overview:</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="more_similar">More similar</string>
    <string name="licence_youtube">Standard youtube license</string>
    <string name="search">Search</string>
    <string name="popular">Popular</string>
    <string name="top_rating">Top rating</string>
    <string name="upcoming">Upcoming</string>
    <string name="tv_on_air">On TV</string>
    <string name="now_playing">Now playing</string>
    <string name="tv_airing_today">Tv airing today</string>
    <string name="biography">Biography:</string>
    <string name="birthday">Birthday:</string>
    <string name="place_of_birth">Place of birth:</string>
    <string name="billed_cast">Billed Cast</string>
    <string name="see_all">SEE ALL</string>
    <string name="status">Status:</string>
    <string name="runtime">Runtime:</string>
    <string name="homepage">Homepage:</string>
    <string name="budget">Budget:</string>
    <string name="revenue">Revenue:</string>
    <string name="user_score">User Score</string>
    <string name="open_with_youtube">Open with youtube</string>
    <string name="share_in">Share in</string>
    <string name="people">People</string>
    <string name="about">About</string>
    <string name="social_media">Social media</string>
    <string name="discover">Discover</string>
    <string name="home">Home</string>
    <string name="in_theaters">In Theaters</string>
    <string name="decease">Decease:</string>
    <string name="no_biography">We do not have a biography for</string>
    <string name="a_review_by">A review by</string>
    <string name="title_dialog">Message</string>
    <string name="github" translatable="false">Github</string>
    <string name="themoviedb_api" translatable="false">TheMovieDb Api</string>
    <string name="rate_me">Rate me</string>
    <string name="share">Share</string>
    <string name="this_app_uses_the_movie_db_api_but_is_not_endorsed_or_certified_by_the_movie_db">This app uses TheMovieDb api but is not endorsed or certified by TheMovieDb</string>

</resources>
