<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:paddingBottom="20dp"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="270dp"
            app:cardCornerRadius="3dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:orientation="vertical"
                android:background="@color/colorPrimaryDark"
                android:gravity="center">

                <com.github.midros.tmdb.ui.widget.CustomViewPagerScroll
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/viewpager_popular_movie"/>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progress_popular_movie"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:id="@+id/img"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_airplay_green_24dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/img"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/colorAccent"
                        android:text="@string/in_theaters"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/see_all"
                        android:clickable="true"
                        android:layout_marginEnd="5dp"
                        android:focusable="true"
                        android:id="@+id/btn_see_all_now_playing"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:background="?android:attr/selectableItemBackground"
                        android:layout_alignParentEnd="true"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/progress_now_playing_movie"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:id="@+id/list_now_playing"
                        android:layout_height="match_parent"
                        android:visibility="gone"
                        android:layout_marginBottom="10dp"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:id="@+id/imgt"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_tv_green_24dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/imgt"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/colorAccent"
                        android:text="@string/tv_on_air"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/see_all"
                        android:clickable="true"
                        android:layout_marginEnd="5dp"
                        android:focusable="true"
                        android:id="@+id/btn_see_all_on_tv"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:background="?android:attr/selectableItemBackground"
                        android:layout_alignParentEnd="true"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/progress_on_tv"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:id="@+id/list_on_tv"
                        android:visibility="gone"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>